Add notes for each topics

--- a/notes/06_Weight_Initialization.ipynb
+++ b/notes/06_Weight_Initialization.ipynb
@@ -35,7 +35,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Small Random Weight - Vanishing Gradients -> Saturation"
+    "# Small Random Weight\n",
+    "\n",
+    "- Small random weight center around the zero with unit gaussian\n",
+    "- Activation becomes zero with funtion of num of layers. Eg: 0.1 X 0.1 < 0.1\n",
+    "- Makes local Gradient on weight small -> Kill the flow of gradient single with lots of matrix multipilcation in backprop. "
    ]
   },
   {
@@ -165,7 +169,13 @@
     "collapsed": true
    },
    "source": [
-    " # Large Random Weights - Exploding Gradients -> Saturation"
+    " # Large | Random Weights |  -> Saturation\n",
+    " \n",
+    "- Large here is compared with smaller random weight in range [-1. 1]\n",
+    "- Causes Activation to saturate with large Weight.\n",
+    "- 2 cases of saturation, Weight Matrix(W):\n",
+    "    1. W > 0: activation to Right side Saturation of Tanh\n",
+    "    1. W < 0: activation to Left side Saturation of Tanh\n"
    ]
   },
   {
@@ -375,7 +385,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Xavier Initialization - Breaks with ReLU"
+    "# Xavier Initialization - Breaks with ReLU\n",
+    "\n",
+    "- ReLU kills approx half of the activation at a time.\n",
+    "- So its halving the Variance on output of ReLU unit.\n",
+    "- Therefore variance gets decrease along the layer. In other word activation distribution starts to collapes."
    ]
   },
   {
