fix the description

--- a/notes/06_Weight_Initialization.ipynb
+++ b/notes/06_Weight_Initialization.ipynb
@@ -38,8 +38,8 @@
     "# Small Random Weight\n",
     "\n",
     "- Small random weight center around the zero with unit gaussian\n",
-    "- Activation becomes zero with funtion of num of layers. Eg: 0.1 X 0.1 < 0.1\n",
-    "- Makes local Gradient on weight small -> Kill the flow of gradient single with lots of matrix multipilcation in backprop. "
+    "- Activation becomes smaller with funtion of num of layers. Eg: 0.1 X 0.1 < 0.1\n",
+    "- Makes local Gradient on weight small (derivative formula) -> Kill the flow of gradient single with lots of matrix multipilcation in backprop. "
    ]
   },
   {
